--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
@@ -192,7 +192,7 @@
     "rwg.biomes.base.BaseBiomeRiver.rwg_oasis": "rwg_oasis",
     "rwg.biomes.base.BaseBiomeRiver.rwg_riverCold": "rwg_riverCold",
     "rwg.biomes.base.BaseBiomeRiver.rwg_riverHot": "rwg_riverHot",
-    "rwg.biomes.base.BaseBiomeRiver.rwg_riverIce": "rwg.Dungeons",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverIce": "rwg_riverIce",
     "rwg.biomes.base.BaseBiomeRiver.rwg_riverOasis": "rwg_riverOasis",
     "rwg.biomes.base.BaseBiomeRiver.rwg_riverTemperate": "rwg_riverTemperate",
     "rwg.biomes.base.BaseBiomeRiver.rwg_riverWet": "rwg_riverWet",
@@ -259,6 +259,7 @@
           "Cold Beach",
           "Cold Taiga",
           "Cold Taiga Hills",
+		  "Cold Taiga M",
           "Mega Taiga",
           "Mega Taiga Hills",
           "Alps",
@@ -268,12 +269,18 @@
           "Glacier",
           "Maple Woods",
           "Polar Chasm",
+		  "rwg_coldForest",
+		  "rwg_coldPlains",
+		  "rwg_riverCold",
+		  "rwg_oceanIce",
+		  "rwg_riverIce",
+		  "rwg_snowDesert",
+		  "rwg_snowForest",
           "Tundra",
           "Snowy Forest",
           "Twilight Glacier",
           "Storage Cell",
-          "Ice Plains Spikes",
-          "Cold Taiga M"
+          "Ice Plains Spikes"
         ]
       },
       "CONIFEROUS": {
@@ -288,6 +295,8 @@
           "Coniferous Forest",
           "Snowy Coniferous Forest",
           "Redwood Forest",
+		  "rwg_coldForest",
+		  "rwg_snowForest",
           "Shield",
           "Spruce Woods",
           "Temperate Rainforest",
@@ -344,7 +353,15 @@
         ]
       },
       "DESERT": {
-        "contents": []
+        "contents": 
+		[
+		"rwg_hotDesert",
+		"rwg_oasis",
+		"Desert",
+		"DesertHills",
+		"Desert M",
+		"Lush Desert"
+		]
       },
       "DRY": {
         "contents": [
@@ -363,6 +380,8 @@
           "Oasis",
           "Outback",
           "Prairie",
+		  "rwg_hotPlains",
+		  "rwg_hotDesert",
           "Scrubland",
           "Shrubland",
           "Steppe",
@@ -424,6 +443,9 @@
           "Ominous Woods",
           "Orchard",
           "Rainforest",
+		  "rwg_hotForest",
+		  "rwg_snowForest",
+		  "rwg_temperateForest",
           "Redwood Forest",
           "Sacred Springs",
           "Seasonal Forest",
@@ -508,6 +530,12 @@
           "Lush Desert",
           "Oasis",
           "Outback",
+		  "rwg_hotDesert",
+		  "rwg_hotForest",
+		  "rwg_hotPlains",
+		  "rwg_oceanHot",
+		  "rwg_oasis",
+		  "rwg_riverOasis",
           "Scrubland",
           "Steppe",
           "Tropical Rainforest",
@@ -532,6 +560,8 @@
           "Bamboo Forest",
           "Oasis",
           "Rainforest",
+		  "rwg_jungle",
+		  "rwg_tropical",
           "Tropical Rainforest",
           "Tropics",
           "Undergarden"
@@ -559,6 +589,7 @@
           "Oasis",
           "Orchard",
           "Rainforest",
+		  "rwg_redwood",
           "Sacred Springs",
           "Seasonal Forest",
           "Spectral Garden",
@@ -639,6 +670,11 @@
           "Lush Swamp",
           "Mangrove",
           "Marsh",
+		  "rwg_oceanHot",
+		  "rwg_oceanIce",
+		  "rwg_oceanOasis",
+		  "rwg_oceanTemperate",
+		  "rwg_oceanWet",
           "Coral Reef",
           "Kelp Forest",
           "Shield",
@@ -665,6 +701,8 @@
           "Orchard",
           "Outback",
           "Prairie",
+		  "rwg_hotPlains",
+		  "rwg_plains",
           "Scrubland",
           "Shrubland",
           "Steppe",
@@ -683,6 +721,12 @@
       "RIVER": {
         "contents": [
           "River",
+		  "rwg_riverCold",
+		  "rwg_riverHot",
+		  "rwg_riverIce",
+		  "rwg_riverOasis",
+		  "rwg_riverTemperate",
+		  "rwg_riverWet",
           "FrozenRiver",
           "Bayou",
           "Lush Swamp",
@@ -864,6 +908,8 @@
           "Mystic Grove",
           "Quagmire",
           "Rainforest",
+		  "rwg_oceanWet",
+		  "rwg_riverWet",
           "Sacred Springs",
           "Shield",
           "Sludgepit",
