--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
@@ -176,6 +176,30 @@
     "net.minecraft.world.biome.BiomeGenTaiga.Mega Spruce Taiga": "Mega Spruce Taiga",
     "net.minecraft.world.biome.BiomeGenTaiga.Mega Taiga": "Mega Taiga",
     "net.minecraft.world.biome.BiomeGenTaiga.Mega Taiga Hills": "Mega Taiga Hills",
+    "rwg.biomes.base.BaseBiomeColdForest.rwg_coldForest": "rwg_coldForest",
+    "rwg.biomes.base.BaseBiomeColdPlains.rwg_coldPlains": "rwg_coldPlains",
+    "rwg.biomes.base.BaseBiomeHotDesert.rwg_hotDesert": "rwg_hotDesert",
+    "rwg.biomes.base.BaseBiomeHotForest.rwg_hotForest": "rwg_hotForest",
+    "rwg.biomes.base.BaseBiomeHotPlains.rwg_hotPlains": "rwg_hotPlains",
+    "rwg.biomes.base.BaseBiomeJungle.rwg_jungle": "rwg_jungle",
+    "rwg.biomes.base.BaseBiomeOcean.rwg_oceanHot": "rwg_oceanHot",
+    "rwg.biomes.base.BaseBiomeOcean.rwg_oceanIce": "rwg_oceanIce",
+    "rwg.biomes.base.BaseBiomeOcean.rwg_oceanOasis": "rwg_oceanOasis",
+    "rwg.biomes.base.BaseBiomeOcean.rwg_oceanTemperate": "rwg_oceanTemperate",
+    "rwg.biomes.base.BaseBiomeOcean.rwg_oceanWet": "rwg_oceanWet",
+    "rwg.biomes.base.BaseBiomePlains.rwg_plains": "rwg_plains",
+    "rwg.biomes.base.BaseBiomeRedwood.rwg_redwood": "rwg_redwood",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_oasis": "rwg_oasis",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverCold": "rwg_riverCold",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverHot": "rwg_riverHot",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverIce": "rwg_riverIce",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverOasis": "rwg_riverOasis",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverTemperate": "rwg_riverTemperate",
+    "rwg.biomes.base.BaseBiomeRiver.rwg_riverWet": "rwg_riverWet",
+    "rwg.biomes.base.BaseBiomeSnowDesert.rwg_snowDesert": "rwg_snowDesert",
+    "rwg.biomes.base.BaseBiomeSnowForest.rwg_snowForest": "rwg_snowForest",
+    "rwg.biomes.base.BaseBiomeTemperateForest.rwg_temperateForest": "rwg_temperateForest",
+    "rwg.biomes.base.BaseBiomeTropicalIsland.rwg_tropical": "rwg_tropical",
     "thaumcraft.common.lib.world.biomes.BiomeGenEerie.Eerie": "Eerie",
     "thaumcraft.common.lib.world.biomes.BiomeGenEldritch.Eldritch": "thaumcraft.Eldritch",
     "thaumcraft.common.lib.world.biomes.BiomeGenEldritchLands.Eldritch": "Eldritch",
@@ -235,6 +259,7 @@
           "Cold Beach",
           "Cold Taiga",
           "Cold Taiga Hills",
+		  "Cold Taiga M",
           "Mega Taiga",
           "Mega Taiga Hills",
           "Alps",
@@ -244,12 +269,18 @@
           "Glacier",
           "Maple Woods",
           "Polar Chasm",
+		  "rwg_coldForest",
+		  "rwg_coldPlains",
+		  "rwg_riverCold",
+		  "rwg_oceanIce",
+		  "rwg_riverIce",
+		  "rwg_snowDesert",
+		  "rwg_snowForest",
           "Tundra",
           "Snowy Forest",
           "Twilight Glacier",
           "Storage Cell",
-          "Ice Plains Spikes",
-          "Cold Taiga M"
+          "Ice Plains Spikes"
         ]
       },
       "CONIFEROUS": {
@@ -264,6 +295,8 @@
           "Coniferous Forest",
           "Snowy Coniferous Forest",
           "Redwood Forest",
+		  "rwg_coldForest",
+		  "rwg_snowForest",
           "Shield",
           "Spruce Woods",
           "Temperate Rainforest",
@@ -320,7 +353,15 @@
         ]
       },
       "DESERT": {
-        "contents": []
+        "contents": 
+		[
+		"rwg_hotDesert",
+		"rwg_oasis",
+		"Desert",
+		"DesertHills",
+		"Desert M",
+		"Lush Desert"
+		]
       },
       "DRY": {
         "contents": [
@@ -339,6 +380,8 @@
           "Oasis",
           "Outback",
           "Prairie",
+		  "rwg_hotPlains",
+		  "rwg_hotDesert",
           "Scrubland",
           "Shrubland",
           "Steppe",
@@ -400,6 +443,9 @@
           "Ominous Woods",
           "Orchard",
           "Rainforest",
+		  "rwg_hotForest",
+		  "rwg_snowForest",
+		  "rwg_temperateForest",
           "Redwood Forest",
           "Sacred Springs",
           "Seasonal Forest",
@@ -484,6 +530,12 @@
           "Lush Desert",
           "Oasis",
           "Outback",
+		  "rwg_hotDesert",
+		  "rwg_hotForest",
+		  "rwg_hotPlains",
+		  "rwg_oceanHot",
+		  "rwg_oasis",
+		  "rwg_riverOasis",
           "Scrubland",
           "Steppe",
           "Tropical Rainforest",
@@ -508,6 +560,8 @@
           "Bamboo Forest",
           "Oasis",
           "Rainforest",
+		  "rwg_jungle",
+		  "rwg_tropical",
           "Tropical Rainforest",
           "Tropics",
           "Undergarden"
@@ -535,6 +589,7 @@
           "Oasis",
           "Orchard",
           "Rainforest",
+		  "rwg_redwood",
           "Sacred Springs",
           "Seasonal Forest",
           "Spectral Garden",
@@ -615,6 +670,11 @@
           "Lush Swamp",
           "Mangrove",
           "Marsh",
+		  "rwg_oceanHot",
+		  "rwg_oceanIce",
+		  "rwg_oceanOasis",
+		  "rwg_oceanTemperate",
+		  "rwg_oceanWet",
           "Coral Reef",
           "Kelp Forest",
           "Shield",
@@ -641,6 +701,8 @@
           "Orchard",
           "Outback",
           "Prairie",
+		  "rwg_hotPlains",
+		  "rwg_plains",
           "Scrubland",
           "Shrubland",
           "Steppe",
@@ -659,6 +721,12 @@
       "RIVER": {
         "contents": [
           "River",
+		  "rwg_riverCold",
+		  "rwg_riverHot",
+		  "rwg_riverIce",
+		  "rwg_riverOasis",
+		  "rwg_riverTemperate",
+		  "rwg_riverWet",
           "FrozenRiver",
           "Bayou",
           "Lush Swamp",
@@ -840,6 +908,8 @@
           "Mystic Grove",
           "Quagmire",
           "Rainforest",
+		  "rwg_oceanWet",
+		  "rwg_riverWet",
           "Sacred Springs",
           "Shield",
           "Sludgepit",
@@ -1297,6 +1367,121 @@
         "contents": [
           "Xeric Shrubland"
         ]
+      },
+      "rwg_coldForest": {
+        "contents": [
+          "rwg_coldForest"
+        ]
+      },
+      "rwg_coldPlains": {
+        "contents": [
+          "rwg_coldPlains"
+        ]
+      },
+      "rwg_hotDesert": {
+        "contents": [
+          "rwg_hotDesert"
+        ]
+      },
+      "rwg_hotForest": {
+        "contents": [
+          "rwg_hotForest"
+        ]
+      },
+      "rwg_hotPlains": {
+        "contents": [
+          "rwg_hotPlains"
+        ]
+      },
+      "rwg_jungle": {
+        "contents": [
+          "rwg_jungle"
+        ]
+      },
+      "rwg_oasis": {
+        "contents": [
+          "rwg_oasis"
+        ]
+      },
+      "rwg_oceanHot": {
+        "contents": [
+          "rwg_oceanHot"
+        ]
+      },
+      "rwg_oceanIce": {
+        "contents": [
+          "rwg_oceanIce"
+        ]
+      },
+      "rwg_oceanOasis": {
+        "contents": [
+          "rwg_oceanOasis"
+        ]
+      },
+      "rwg_oceanTemperate": {
+        "contents": [
+          "rwg_oceanTemperate"
+        ]
+      },
+      "rwg_oceanWet": {
+        "contents": [
+          "rwg_oceanWet"
+        ]
+      },
+      "rwg_plains": {
+        "contents": [
+          "rwg_plains"
+        ]
+      },
+      "rwg_redwood": {
+        "contents": [
+          "rwg_redwood"
+        ]
+      },
+      "rwg_riverCold": {
+        "contents": [
+          "rwg_riverCold"
+        ]
+      },
+      "rwg_riverHot": {
+        "contents": [
+          "rwg_riverHot"
+        ]
+      },
+      "rwg_riverOasis": {
+        "contents": [
+          "rwg_riverOasis"
+        ]
+      },
+      "rwg_riverTemperate": {
+        "contents": [
+          "rwg_riverTemperate"
+        ]
+      },
+      "rwg_riverWet": {
+        "contents": [
+          "rwg_riverWet"
+        ]
+      },
+      "rwg_snowDesert": {
+        "contents": [
+          "rwg_snowDesert"
+        ]
+      },
+      "rwg_snowForest": {
+        "contents": [
+          "rwg_snowForest"
+        ]
+      },
+      "rwg_temperateForest": {
+        "contents": [
+          "rwg_temperateForest"
+        ]
+      },
+      "rwg_tropical": {
+        "contents": [
+          "rwg_tropical"
+        ]
       }
     },
     "biome": {
@@ -1329,6 +1514,13 @@
       "fossilsarcheology.biome.treasure.name": {
         "contents": [
           "fossilsarcheology.biome.treasure.name"
+        ]
+      }
+    },
+    "rwg": {
+      "rwg.Dungeons": {
+        "contents": [
+          "rwg.Dungeons"
         ]
       }
     },
