--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/BiomeGroups.cfg
@@ -925,57 +925,37 @@
   },
   "Biome Groups": {
     "": {
-      "Abandoned Caves": {
-        "contents": [
-          "Abandoned Caves"
-        ]
-      },
       "Aether": {
         "contents": [
-          "Aether"
+          "Aether",
+		  "Dungeons"
         ]
       },
-      "Alps Forest": {
+      "Arctic Biomes": {
         "contents": [
-          "Alps Forest"
-        ]
-      },
-      "ArcticBG": {
-        "contents": [
+		  "Alps Forest",
+		  "Arctic",
+		  "Cold Taiga M",
+		  "Glacier",
           "Ice Plains",
           "Ice Mountains",
-          "Arctic",
-          "Glacier",
           "Ice Plains Spikes",
-          "Cold Taiga M",
-          "Twilight Glacier"
-        ]
-      },
-      "BambooForest": {
-        "contents": [
-          "BambooForest"
-        ]
-      },
-      "Bedrock Plains": {
-        "contents": [
-          "Bedrock Plains"
-        ]
-      },
-      "Caves": {
-        "contents": [
-          "Caves"
+          "Twilight Glacier",
+		  "rwg_coldForest",
+		  "rwg_coldPlains",
+		  "rwg_snowDesert",
+		  "rwg_snowForest",
+		  "Snowy Gravel Beach",
+		  "ttftcuts.Tundra"
         ]
       },
       "Coastal": {
         "contents": [
           "Beach",
           "Stone Beach",
-          "Cold Beach"
-        ]
-      },
-      "Compressed": {
-        "contents": [
-          "Compressed"
+          "Cold Beach",
+		  "Gravel Beach",
+		  "Snowy Gravel Beach"
         ]
       },
       "Creepy": {
@@ -983,16 +963,6 @@
           "Ominous Woods",
           "Silkglades",
           "Eerie"
-        ]
-      },
-      "Crystal": {
-        "contents": [
-          "Crystal"
-        ]
-      },
-      "Darkness": {
-        "contents": [
-          "Darkness"
         ]
       },
       "Dead": {
@@ -1004,97 +974,91 @@
           "Quagmire"
         ]
       },
-      "Deep World": {
+	  "Deeper Caves": {
         "contents": [
-          "Deep World"
+          "Abandoned Caves",
+		  "Caves",
+		  "Bedrock Plains",
+		  "Compressed",
+		  "Crystal",
+		  "Darkness",
+		  "Deep World",
+		  "Drop",
+		  "Evil",
+		  "Far Void",
+		  "Final Labyrinth",
+		  "Forgotten",
+		  "Lava",
+		  "Near Void",
+		  "Near Nether",
+		  "Maze",
+		  "Mutation"
         ]
       },
-      "Dense Forest": {
+	   "Dimesnions": {
         "contents": [
-          "Dense Forest"
+		  "fossilsarcheology.biome.treasure.name",
+          "Land of Darkness",
+		  "WyvernBiome",
+		  "rwg.Dungeons",
+		  "biome.treasure.name"
         ]
       },
-      "Drop": {
+      "End": {
         "contents": [
-          "Drop"
-        ]
-      },
-      "Dungeons": {
-        "contents": [
-          "Dungeons"
-        ]
-      },
-      "Eldritch": {
-        "contents": [
-          "Eldritch"
-        ]
-      },
-      "EndBG": {
-        "contents": [
+		  "chylex.Sky",
           "Sky",
           "Spectral Garden"
         ]
       },
-      "Eucalyptus Forest": {
+      "Forest": {
         "contents": [
-          "Eucalyptus Forest"
-        ]
-      },
-      "Evil": {
-        "contents": [
-          "Evil"
-        ]
-      },
-      "Far Void": {
-        "contents": [
-          "Far Void"
-        ]
-      },
-      "Final Labyrinth": {
-        "contents": [
-          "Final Labyrinth"
-        ]
-      },
-      "Firefly Forest": {
-        "contents": [
-          "Firefly Forest"
-        ]
-      },
-      "Forgotten": {
-        "contents": [
-          "Forgotten"
+		  "Alps Forest",
+		  "BambooForest",
+		  "Birch Forest",
+          "Birch Forest Hills",
+		  "Birch Forest M",
+          "Birch Forest Hills M",
+		  "biomesoplenty.Orchard",
+		  "Boreal Forest",
+		  "Coniferous Forest",
+		  "Dead Forest",
+		  "Deciduous Forest",
+		  "Dense Forest",
+		  "Eucalyptus Forest",
+		  "Firefly Forest",
+		  "Forest",
+          "ForestHills",
+		  "Frost Forest",
+          "Roofed Forest",
+		  "Maple Woods",
+          "Meadow Forest",
+		  "Mega Spruce Taiga",
+		  "Redwood Forest",
+		  "rwg_coldForest",
+		  "rwg_hotForest",
+		  "rwg_redwood",
+		  "rwg_snowForest",
+		  "rwg_temperateForest",
+		  "Seasonal Forest Clearing",
+		  "Spruce Woods",
+		  "Snowy Coniferous Forest",
+		  "Thicket",
+		  "ttftcuts.Woodland",
+		  "WitchwoodForest"
         ]
       },
       "Freshwater": {
         "contents": [
           "River",
           "FrozenRiver",
-          "Lush River"
-        ]
-      },
-      "Gravel Beach": {
-        "contents": [
-          "Gravel Beach"
-        ]
-      },
-      "Land of Darkness": {
-        "contents": [
-          "Land of Darkness"
-        ]
-      },
-      "Land of Lakes": {
-        "contents": [
-          "Land of Lakes"
-        ]
-      },
-      "Land of Lakes Marsh": {
-        "contents": [
-          "Land of Lakes Marsh"
-        ]
-      },
-      "Lava": {
-        "contents": [
-          "Lava"
+          "Lush River",
+		  "Land of Lakes",
+		  "rwg_riverCold",
+		  "rwg_riverHot",
+		  "rwg_riverOasis",
+		  "rwg_riverTemperate",
+		  "rwg_riverWet"
         ]
       },
       "Marine": {
@@ -1103,30 +1067,31 @@
           "FrozenOcean",
           "Deep Ocean",
           "Coral Reef",
-          "Kelp Forest"
+          "Kelp Forest",
+		  "rwg_oceanHot",
+		  "rwg_oceanIce",
+		  "rwg_oceanOasis",
+		  "rwg_oceanTemperate",
+		  "rwg_oceanWet"
         ]
       },
-      "Maze": {
+	  "Mountain": {
         "contents": [
-          "Maze"
+		  "Alps",
+		  "Cold Taiga Hills",
+		  "Extreme Hills",
+          "Extreme Hills Edge",
+          "Extreme Hills+",
+          "Extreme Hills M",
+          "Extreme Hills+ M",
+		  "Highland",
+		  "Jade Cliffs",
+		  "Mountain",
+          "Rocky Steppe", 
+		  "ttftcuts.Volcano"
         ]
       },
-      "Mutation": {
-        "contents": [
-          "Mutation"
-        ]
-      },
-      "Near Nether": {
-        "contents": [
-          "Near Nether"
-        ]
-      },
-      "Near Void": {
-        "contents": [
-          "Near Void"
-        ]
-      },
-      "NetherBG": {
+      "Nether": {
         "contents": [
           "Hell",
           "Phantasmagoric Inferno",
@@ -1134,34 +1099,15 @@
           "Visceral Heap",
           "Corrupted Sands",
           "Undergarden",
-          "Polar Chasm"
-        ]
-      },
-      "Rocky Steppe": {
-        "contents": [
-          "Rocky Steppe"
-        ]
-      },
-      "Rotting": {
-        "contents": [
-          "Visceral Heap",
-          "Dead Swamp"
-        ]
-      },
-      "Seasonal Forest Clearing": {
-        "contents": [
-          "Seasonal Forest Clearing"
+          "Polar Chasm",
+		  "Near Nether"
         ]
       },
       "Shroom": {
         "contents": [
           "MushroomIsland",
-          "MushroomIslandShore"
-        ]
-      },
-      "Snowy Gravel Beach": {
-        "contents": [
-          "Snowy Gravel Beach"
+          "MushroomIslandShore",
+		  "Fungi Forest"
         ]
       },
       "SubArctic": {
@@ -1172,15 +1118,6 @@
           "Alps",
           "Snowy Coniferous Forest",
           "Fen"
-        ]
-      },
-      "SubArcticDry": {
-        "contents": [
-          "Extreme Hills",
-          "Extreme Hills Edge",
-          "Extreme Hills+",
-          "Extreme Hills M",
-          "Extreme Hills+ M"
         ]
       },
       "SubArcticWet": {
@@ -1240,31 +1177,30 @@
           "Roofed Forest M"
         ]
       },
-      "Taint": {
-        "contents": [
-          "Tainted Land"
-        ]
-      },
+	  "Swamp":	{
+	  "contents": [
+         "Bayou",
+		 "Dead Swamp",
+		 "Land of Lakes Marsh"
+		 "Lush Swamp",
+		 "Swampland"
+	  ]
+	  },
       "Temperate": {
         "contents": [
           "Birch Forest",
           "Birch Forest Hills",
+		  "Birch Forest M",
+          "Birch Forest Hills M",
           "Coniferous Forest",
           "Flower Field",
           "Highland",
-          "Sacred Springs",
+          "rwg_plains",
+		  "rwg_temperateForest",
+		  "Sacred Springs",
           "Shrubland",
-          "Birch Forest M",
-          "Birch Forest Hills M",
-          "Eerie",
-          "WyvernBiome"
-        ]
-      },
-      "TemperateDry": {
-        "contents": [
-          "Jade Cliffs",
-          "Mountain",
-          "Thicket"
+		  "ttftcuts.Woodland",
+		  "ttftcuts.Shrubland"
         ]
       },
       "TemperateWet": {
@@ -1284,11 +1220,12 @@
           "Spruce Woods"
         ]
       },
-      "Tropic": {
+	  "Thaumcraft": {
         "contents": [
-          "Steppe",
-          "Volcano",
-          "Oasis"
+		 "Eerie",
+		 "Eldritch",
+		 "Tainted Land",
+		 "thaumcraft.Eldritch",
         ]
       },
       "TropicDry": {
@@ -1306,7 +1243,12 @@
           "Savanna Plateau M",
           "Mesa (Bryce)",
           "Mesa Plateau F M",
-          "Mesa Plateau M"
+          "Mesa Plateau M",
+		  "rwg_hotDesert",
+		  "rwg_hotForest",
+		  "rwg_hotPlains",
+		  "Tropical Shrubland",
+		  "Xeric Shrubland"
         ]
       },
       "TropicWet": {
@@ -1317,25 +1259,19 @@
           "Tropical Rainforest",
           "Tropics",
           "Jungle M",
-          "JungleEdge M"
+          "JungleEdge M",
+		  "rwg_jungle",
+		  "rwg_oasis",
+		  "rwg_tropical"
         ]
       },
-      "Tropical Shrubland": {
-        "contents": [
-          "Tropical Shrubland"
-        ]
-      },
-      "Twilight Highlands": {
-        "contents": [
-          "Twilight Highlands"
-        ]
-      },
-      "TwilightForestBG": {
+      "Twilight Forest": {
         "contents": [
           "Twilight Clearing",
           "Dark Forest",
           "Dark Forest Center",
           "Deep Mushroom Forest",
+		  "Dense Twilight Forest",
           "Enchanted Forest",
           "Fire Swamp",
           "Highlands",
@@ -1344,218 +1280,13 @@
           "Mushroom Forest",
           "Oak Savanna",
           "Snowy Forest",
+		  "Twilight Highlands",
           "Twilight Stream",
           "Twilight Swamp",
           "Thornlands",
           "Twilight Forest",
-          "Dense Twilight Forest",
-          "Twilight Lake"
-        ]
-      },
-      "WitchwoodForest": {
-        "contents": [
-          "WitchwoodForest"
-        ]
-      },
-      "WyvernLair": {
-        "contents": [
-          "WyvernBiome"
-        ]
-      },
-      "Xeric Shrubland": {
-        "contents": [
-          "Xeric Shrubland"
-        ]
-      },
-      "rwg_coldForest": {
-        "contents": [
-          "rwg_coldForest"
-        ]
-      },
-      "rwg_coldPlains": {
-        "contents": [
-          "rwg_coldPlains"
-        ]
-      },
-      "rwg_hotDesert": {
-        "contents": [
-          "rwg_hotDesert"
-        ]
-      },
-      "rwg_hotForest": {
-        "contents": [
-          "rwg_hotForest"
-        ]
-      },
-      "rwg_hotPlains": {
-        "contents": [
-          "rwg_hotPlains"
-        ]
-      },
-      "rwg_jungle": {
-        "contents": [
-          "rwg_jungle"
-        ]
-      },
-      "rwg_oasis": {
-        "contents": [
-          "rwg_oasis"
-        ]
-      },
-      "rwg_oceanHot": {
-        "contents": [
-          "rwg_oceanHot"
-        ]
-      },
-      "rwg_oceanIce": {
-        "contents": [
-          "rwg_oceanIce"
-        ]
-      },
-      "rwg_oceanOasis": {
-        "contents": [
-          "rwg_oceanOasis"
-        ]
-      },
-      "rwg_oceanTemperate": {
-        "contents": [
-          "rwg_oceanTemperate"
-        ]
-      },
-      "rwg_oceanWet": {
-        "contents": [
-          "rwg_oceanWet"
-        ]
-      },
-      "rwg_plains": {
-        "contents": [
-          "rwg_plains"
-        ]
-      },
-      "rwg_redwood": {
-        "contents": [
-          "rwg_redwood"
-        ]
-      },
-      "rwg_riverCold": {
-        "contents": [
-          "rwg_riverCold"
-        ]
-      },
-      "rwg_riverHot": {
-        "contents": [
-          "rwg_riverHot"
-        ]
-      },
-      "rwg_riverOasis": {
-        "contents": [
-          "rwg_riverOasis"
-        ]
-      },
-      "rwg_riverTemperate": {
-        "contents": [
-          "rwg_riverTemperate"
-        ]
-      },
-      "rwg_riverWet": {
-        "contents": [
-          "rwg_riverWet"
-        ]
-      },
-      "rwg_snowDesert": {
-        "contents": [
-          "rwg_snowDesert"
-        ]
-      },
-      "rwg_snowForest": {
-        "contents": [
-          "rwg_snowForest"
-        ]
-      },
-      "rwg_temperateForest": {
-        "contents": [
-          "rwg_temperateForest"
-        ]
-      },
-      "rwg_tropical": {
-        "contents": [
-          "rwg_tropical"
-        ]
-      }
-    },
-    "biome": {
-      "biome.treasure.name": {
-        "contents": [
-          "biome.treasure.name"
-        ]
-      }
-    },
-    "biomesoplenty": {
-      "biomesoplenty.Orchard": {
-        "contents": [
-          "biomesoplenty.Orchard"
-        ]
-      }
-    },
-    "chylex": {
-      "chylex.Sky": {
-        "contents": [
-          "chylex.Sky"
-        ]
-      }
-    },
-    "fossilsarcheology": {
-      "fossilsarcheology.Land of Darkness": {
-        "contents": [
-          "fossilsarcheology.Land of Darkness"
-        ]
-      },
-      "fossilsarcheology.biome.treasure.name": {
-        "contents": [
-          "fossilsarcheology.biome.treasure.name"
-        ]
-      }
-    },
-    "rwg": {
-      "rwg.Dungeons": {
-        "contents": [
-          "rwg.Dungeons"
-        ]
-      }
-    },
-    "thaumcraft": {
-      "thaumcraft.Eldritch": {
-        "contents": [
-          "thaumcraft.Eldritch"
-        ]
-      }
-    },
-    "ttftcuts": {
-      "ttftcuts.Shrubland": {
-        "contents": [
-          "ttftcuts.Shrubland"
-        ]
-      },
-      "ttftcuts.Tundra": {
-        "contents": [
-          "ttftcuts.Tundra"
-        ]
-      },
-      "ttftcuts.Volcano": {
-        "contents": [
-          "ttftcuts.Volcano"
-        ]
-      },
-      "ttftcuts.Woodland": {
-        "contents": [
-          "ttftcuts.Woodland"
-        ]
-      }
-    },
-    "twilightforest": {
-      "twilightforest.Highlands Center": {
-        "contents": [
-          "twilightforest.Highlands Center"
+          "Twilight Lake",
+		  "twilightforest.Highlands Center"
         ]
       }
     }
