--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/SpecialMobs.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/SpecialMobs.cfg
@@ -2,637 +2,637 @@
   "FILE_VERSION": "3.0",
   "LIVING_HANDLERS": {
     "SpecialMobs.JoltBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.JoltBlaze"
       ]
     },
     "SpecialMobs.HungryPigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.HungryPigZombie"
       ]
     },
     "SpecialMobs.PlagueZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PlagueZombie"
       ]
     },
     "SpecialMobs.CinderBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.CinderBlaze"
       ]
     },
     "SpecialMobs.DarkCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DarkCreeper"
       ]
     },
     "SpecialMobs.CursedEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.CursedEnderman"
       ]
     },
     "SpecialMobs.ConflagrationBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ConflagrationBlaze"
       ]
     },
     "SpecialMobs.DominationWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DominationWitch"
       ]
     },
     "SpecialMobs.UnholyGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.UnholyGhast"
       ]
     },
     "SpecialMobs.SpecialSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialSilverfish"
       ]
     },
     "SpecialMobs.PoisonSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PoisonSpider"
       ]
     },
     "SpecialMobs.UndeadWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.UndeadWitch"
       ]
     },
     "SpecialMobs.FireSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FireSkeleton"
       ]
     },
     "SpecialMobs.DeathCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DeathCreeper"
       ]
     },
     "SpecialMobs.FlyingSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FlyingSpider"
       ]
     },
     "SpecialMobs.BabySpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BabySpider"
       ]
     },
     "SpecialMobs.WildsWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WildsWitch"
       ]
     },
     "SpecialMobs.GrapeSlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GrapeSlime"
       ]
     },
     "SpecialMobs.ToughSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ToughSilverfish"
       ]
     },
     "SpecialMobs.ToughCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ToughCaveSpider"
       ]
     },
     "SpecialMobs.ThiefSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ThiefSkeleton"
       ]
     },
     "SpecialMobs.InfernoBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.InfernoBlaze"
       ]
     },
     "SpecialMobs.CaramelSlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.CaramelSlime"
       ]
     },
     "SpecialMobs.MiniGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MiniGhast"
       ]
     },
     "SpecialMobs.WebCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WebCaveSpider"
       ]
     },
     "SpecialMobs.GiantSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GiantSkeleton"
       ]
     },
     "SpecialMobs.SplittingCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SplittingCreeper"
       ]
     },
     "SpecialMobs.JumpingCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.JumpingCreeper"
       ]
     },
     "SpecialMobs.ThiefEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ThiefEnderman"
       ]
     },
     "SpecialMobs.FighterGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FighterGhast"
       ]
     },
     "SpecialMobs.BlueberrySlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BlueberrySlime"
       ]
     },
     "SpecialMobs.WatermelonSlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WatermelonSlime"
       ]
     },
     "SpecialMobs.GiantSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GiantSpider"
       ]
     },
     "SpecialMobs.GravityCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GravityCreeper"
       ]
     },
     "SpecialMobs.SpecialBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialBlaze"
       ]
     },
     "SpecialMobs.LightningCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.LightningCreeper"
       ]
     },
     "SpecialMobs.BabyGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BabyGhast"
       ]
     },
     "SpecialMobs.BabyCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BabyCaveSpider"
       ]
     },
     "SpecialMobs.WebSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WebSpider"
       ]
     },
     "SpecialMobs.ToughSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ToughSpider"
       ]
     },
     "SpecialMobs.GravelCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GravelCreeper"
       ]
     },
     "SpecialMobs.WitchCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WitchCaveSpider"
       ]
     },
     "SpecialMobs.WitchSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WitchSpider"
       ]
     },
     "SpecialMobs.ShadowsWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ShadowsWitch"
       ]
     },
     "SpecialMobs.SpecialCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialCreeper"
       ]
     },
     "SpecialMobs.BlindingSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BlindingSilverfish"
       ]
     },
     "SpecialMobs.HungryZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.HungryZombie"
       ]
     },
     "SpecialMobs.NinjaSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.NinjaSkeleton"
       ]
     },
     "SpecialMobs.DesertSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DesertSpider"
       ]
     },
     "SpecialMobs.EnderCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.EnderCreeper"
       ]
     },
     "SpecialMobs.StrawberrySlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.StrawberrySlime"
       ]
     },
     "SpecialMobs.SpecialSlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialSlime"
       ]
     },
     "SpecialMobs.QueenGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.QueenGhast"
       ]
     },
     "SpecialMobs.HungrySpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.HungrySpider"
       ]
     },
     "SpecialMobs.MotherCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MotherCaveSpider"
       ]
     },
     "SpecialMobs.DirtCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DirtCreeper"
       ]
     },
     "SpecialMobs.FireCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FireCreeper"
       ]
     },
     "SpecialMobs.GhostSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GhostSpider"
       ]
     },
     "SpecialMobs.FireZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FireZombie"
       ]
     },
     "SpecialMobs.MirageEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MirageEnderman"
       ]
     },
     "SpecialMobs.SpecialSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialSkeleton"
       ]
     },
     "SpecialMobs.MotherSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MotherSpider"
       ]
     },
     "SpecialMobs.MiniCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MiniCreeper"
       ]
     },
     "SpecialMobs.SpecialPigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialPigZombie"
       ]
     },
     "SpecialMobs.GiantZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GiantZombie"
       ]
     },
     "SpecialMobs.SpitfireSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpitfireSkeleton"
       ]
     },
     "SpecialMobs.DoomCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DoomCreeper"
       ]
     },
     "SpecialMobs.GatlingSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GatlingSkeleton"
       ]
     },
     "SpecialMobs.WindWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WindWitch"
       ]
     },
     "SpecialMobs.BlackberrySlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BlackberrySlime"
       ]
     },
     "SpecialMobs.SpecialEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialEnderman"
       ]
     },
     "SpecialMobs.FishingZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FishingZombie"
       ]
     },
     "SpecialMobs.ArmorCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.ArmorCreeper"
       ]
     },
     "SpecialMobs.PlaguePigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PlaguePigZombie"
       ]
     },
     "SpecialMobs.SpecialWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialWitch"
       ]
     },
     "SpecialMobs.LightningEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.LightningEnderman"
       ]
     },
     "SpecialMobs.FishingPigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FishingPigZombie"
       ]
     },
     "SpecialMobs.RageWitch": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.RageWitch"
       ]
     },
     "SpecialMobs.SpecialSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialSpider"
       ]
     },
     "SpecialMobs.PoisonSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PoisonSilverfish"
       ]
     },
     "SpecialMobs.BrutishPigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BrutishPigZombie"
       ]
     },
     "SpecialMobs.PoisonSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PoisonSkeleton"
       ]
     },
     "SpecialMobs.HellfireBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.HellfireBlaze"
       ]
     },
     "SpecialMobs.BrutishSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BrutishSkeleton"
       ]
     },
     "SpecialMobs.SniperSkeleton": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SniperSkeleton"
       ]
     },
     "SpecialMobs.SpecialGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialGhast"
       ]
     },
     "SpecialMobs.LemonSlime": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.LemonSlime"
       ]
     },
     "SpecialMobs.VampirePigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.VampirePigZombie"
       ]
     },
     "SpecialMobs.SpecialZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialZombie"
       ]
     },
     "SpecialMobs.FlyingSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FlyingSilverfish"
       ]
     },
     "SpecialMobs.MiniEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.MiniEnderman"
       ]
     },
     "SpecialMobs.DrowningCreeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.DrowningCreeper"
       ]
     },
     "SpecialMobs.FaintGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FaintGhast"
       ]
     },
     "SpecialMobs.GiantPigZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.GiantPigZombie"
       ]
     },
     "SpecialMobs.FishingSilverfish": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FishingSilverfish"
       ]
     },
     "SpecialMobs.IcyEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.IcyEnderman"
       ]
     },
     "SpecialMobs.SmallSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SmallSpider"
       ]
     },
     "SpecialMobs.EmberBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.EmberBlaze"
       ]
     },
     "SpecialMobs.SpecialCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SpecialCaveSpider"
       ]
     },
     "SpecialMobs.FlyingCaveSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.FlyingCaveSpider"
       ]
     },
     "SpecialMobs.SmolderBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.SmolderBlaze"
       ]
     },
     "SpecialMobs.KingGhast": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.KingGhast"
       ]
     },
     "SpecialMobs.BlindingEnderman": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BlindingEnderman"
       ]
     },
     "SpecialMobs.PaleSpider": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.PaleSpider"
       ]
     },
     "SpecialMobs.BrutishZombie": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.BrutishZombie"
       ]
     },
     "SpecialMobs.WildfireBlaze": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "NONE-true",
       "Contents": [
         "SpecialMobs.WildfireBlaze"
       ]
